8339683: Simplify class data generation in InvokerBytecodeGenerator
Reviewed-by: redestad